--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Robosoftians</title>
 </head>
 <body>
-<h1>Hello All new Robosoftians</h1>
+<h1>Hello All new Robosoftians! We wish you all success in your career in Robosoft</h1>
 </body>
 </html>
